# IsoStack

./: .gitignore  IsoStack_Agent_Briefing.md  README.md  TODO.md  pnpm-lock.yaml
apps/api/: dependencies.py  main.py  pyproject.toml
apps/api/models/: arch_schema.py  request_models.py
apps/api/prompts/: arch_system_prompt.txt  boilerplate_agent_prompt.txt
apps/api/routers/: chat.py  generate.py  health.py  workspace.py
apps/api/services/: file_extractor.py  layout_service.py  openai_service.py
apps/web/: download-colored-icons.mjs  download-icons.mjs  download-missing.mjs  download-phase1-icons.mjs  generate-packs.mjs  index.html  link-icons.mjs  migrate.mjs  package-lock.json  package.json  tailwind.config.ts  verify-icons.mjs
apps/web/src/: App.tsx  index.css  main.tsx
apps/web/src/components/: BuilderView.tsx
apps/web/src/hooks/: useGenerateArch.ts  useIsoCoords.ts
apps/web/src/lib/: api.ts  architecture.templates.ts  architecture.validator.ts  cost.estimator.ts  export.openapi.ts  export.terraform.ts  exportUtils.ts  (+7 more)
n8n-analysis/: 01-frontend-architecture-overview.md  02-application-shell-and-routing.md  03-workflow-document-model.md  04-canvas-engine.md  05-node-registry-and-node-types.md  06-node-details-and-parameter-editing.md  07-state-management-and-stores.md  08-command-system-and-shortcuts.md  09-context-menus-and-quick-actions.md  10-node-creator-and-discovery.md  11-design-system-and-ui-primitives.md  12-execution-and-run-data.md  13-telemetry-and-observability.md  14-testing-and-quality.md  15-evolution-and-maintenance.md  README.md
(+63 files in other folders)
