[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.138.1",
    "openai>=2.44.0",
    "pydantic>=2.13.4",
    "pyjwt>=2.13.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "uvicorn>=0.49.0",
]
